added about page

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <nav class="nav">
          <a href="#" class="navLink">Product</a>
          <a href="#" class="navLink">Services</a>
-         <a href="#" class="navLink">About</a>
+         <a href="/about" class="navLink">About</a>
          <button class="navLink loginBtn" onclick="login()">Log In</button>
          <div class="menuClose showWhenMobile" ></div>
       </nav>
