--- a/about/index.html
+++ b/about/index.html
@@ -7,6 +7,9 @@
    <title>About</title>
    <link rel="stylesheet" href="../style.css">
    <link rel="stylesheet" href="./style.css">
+
+   <link rel="shortcut icon" href="../images/logo.png" type="image/x-icon">
+
    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.css" />
    <script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js" defer></script><script src="https://cdnjs.cloudflare.com/ajax/libs/lottie-web/5.10.2/lottie.min.js" integrity="sha512-fTTVSuY9tLP+l/6c6vWz7uAQqd1rq3Q/GyKBN2jOZvJSLC5RjggSdboIFL1ox09/Ezx/AKwcv/xnDeYN9+iDDA==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
    <script src="./app.js" defer></script>
