added blog page

--- a/index.html
+++ b/index.html
@@ -294,7 +294,7 @@
             </div>
          </div>
       </div>
-      <button class="loadMoreArticles">Load More</button>
+      <a href="./blog" class="loadMoreArticles">Load More</a>
    </section>
 
    <section class="contact">
